# mtxop

./: CMakeLists.txt  Makefile
cmake/: LTO.cmake
doc/: changelog.txt  mat_float_double_example.txt  mat_int_example.txt
doc/Implementacja referencyjna/RefAlgebra/include/RefAlgebra/: CMtx.h  refAlgebraExceptions.h  types.h
include/mtxop/: matrix.h  matrix_ref.h  vector.h
include/tep-contest/: matrix.h  vector.h  vector_ref.h
src/: CMtx.cpp  CMtx.h  CVct.cpp  CVct.h  Test_main.cpp  changelog.txt  matrix.cpp  matrix.h  matrix_ref.cpp  matrix_ref.h  test.cpp  vector.cpp  vector.h  vector_ref.cpp
